Add todos content and styling.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,10 +10,13 @@
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
+    <!--  header  -->
     <header>
     <h1> Pomodoro Todo </h1>
     </header>
-      
+
+      <!--  Form  -->
+  
       <section class="form-container">
         <div class="form-container__details">
           <div class="form-container__title"> Welcome Back! </div>
