--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!--  Header  -->
   <header>
     <h1> Pomodoro Todo </h1>
   </header>
+  
+      <!--  Form  -->
        <section class="form-container">
         <div class="form-container__details">
           <div class="form-container__title"> Welcome! </div>
