--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <title>Document</title>
     <link rel="stylesheet" href="css/todos.css">
     
 </head>
 <body>
+
+  <h1> Pomodoro Todo </h1> 
+
+  <section class="pomo-container">
+    <div class="pomo-container__session-change-buttons">
+      <div class="pomo-container__session-change-button-details">
+        <button class="pomo-container__button">Pomodoro</button>
+        <button class="pomo-container__button">Short Break</button>
+        <button class="pomo-container__button">Long Break</button>
+      </div>
+      <div class="pomo-container__timer">
+        <span class="pomo-container__timer-minutes">25</span>
+        <span class="pomo-container__timer-separator">:</span>
+        <span class="pomo-container__timer-seconds">00</span>
+      </div>
+      <div class="pomo-container_start-stop-buttons">
+        <button class="pomo-container__start-stop-button">Start</button>
+      </div>
+    </div>
+  </section>
+
   <div class = "box" id = "heading">
-    <h1>Tasks</h1>
+    <h2>Tasks</h2>
   </div>
 
   <div class = "box">
@@ -28,12 +50,12 @@
                 
     <% }) %>  
 
-    <h2><%= user.userName %> has <%= left %> things left to do.</h2>
+    <h3><%= user.userName %> has <%= left %> things left to do.</h3>
 
     <form class="item" action="/todos/createTodo" method='POST'>
         <input type="text" placeholder="Add Task" name='todoItem'>
         <input type="text" placeholder="Priority" name='priority'> 
-        <button type="submit" name="button">+</button>
+        <button class="btn-submit" type="submit" name="button">+</button>
     </form>
     
   </div>
