--- a/public/css/todos.css
+++ b/public/css/todos.css
@@ -7,17 +7,26 @@
 }
 
 html {
-  background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(70deg, #2e8bc0 50%, #E4E9FD 50%);
   min-height: 1000px;
   font-family: 'helvetica neue';
   margin: 0; 
   padding: 0; 
 }
 
+body {
+  background-color: #E4E9FD;
+  background-image: -webkit-linear-gradient(70deg, #2e8bc0 50%, #E4E9FD 50%);
+}
+
+.dark-mode {
+  background-color: #141414; 
+  background-image: none; 
+}
+
 h1 {
   text-align: center;
   margin: 0 auto 2.5rem;
+  padding-top: 1rem; 
   color: var(--blue);
   font-size: 2.5rem;
   font-family: 'Pacifico', cursive;
@@ -158,10 +167,6 @@ input[type="text"]:focus {
 
 /* Pomodoro */
 
-.hidden {
-  display: none; 
-}
-
 .pomo-container {
   color: var(--white);
   font-weight: 700; 
@@ -223,4 +228,3 @@ input[type="text"]:focus {
 .pomo-container__start-stop-button:hover{
   cursor: pointer; 
 }
-
