--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -7,7 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <title>Document</title>
     <link rel="stylesheet" href="css/todos.css">
-    <script src="https://kit.fontawesome.com/2a5293cd7e.js" crossorigin="anonymous"></script>
+    <!-- had to swap fa script to gain access to some missing icons -->
+    <!--<script src="https://kit.fontawesome.com/2a5293cd7e.js" crossorigin="anonymous"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/fontawesome.min.js" integrity="sha512-j3gF1rYV2kvAKJ0Jo5CdgLgSYS7QYmBVVUjduXdoeBkc4NFV4aSRTi+Rodkiy9ht7ZYEwF+s09S43Z1Y+ujUkA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/solid.min.js" integrity="sha512-dcTe66qF6q/NW1X64tKXnDDcaVyRowrsVQ9wX6u7KSQpYuAl5COzdMIYDg+HqAXhPpIz1LO9ilUCL4qCbHN5Ng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  
     
 </head>
 <body>
@@ -38,14 +43,17 @@
 
   <div class = "box">
     
-    <% todos.forEach( el => { %>
+    <% todos.forEach( (el, index) => { %>
       <div class = "item">
         <input type = "checkbox">
         <p class='todoItem' data-id='<%=el._id%>'>
+          <span><%= index + 1 %></span>
           <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-              <span> <%= el.priority %>  </span>
-                <span class='del'> <i class=" fa fa-solid fa-trash" id="customfa"></i> </span>
-            </p>
+          <span class='todoNote'> <%= el.todoNote %>  </span>
+          <span class='del'> <i class=" fa fa-solid fa-trash-can" id="customfa"></i> </span>
+          <span class="down"> <i class="fa fa-solid fa-circle-down"></i> </span>
+          <span class="up"> <i class="fa fa-solid fa-circle-up"></i> </span>
+        </p>
       </div>
             
                 
@@ -54,9 +62,11 @@
     <h3><%= user.userName %> has <%= left %> things left to do. 
     </h3>
 
+      <div class='formField'>
   <form class="item" action="/todos/createTodo" method='POST'>
         <input type="text" placeholder="Add Task" name='todoItem'>
-        <input type="text" placeholder="Priority" name='priority'> 
+        <input type="text" placeholder="Priority" name='priority'>
+        <input type="text" placeholder="Note" name='todoNote'>
         <button class="btn-submit" type="submit" name="button">+ 
         </button>
   </form>
