--- a/public/css/todos.css
+++ b/public/css/todos.css
@@ -48,6 +48,7 @@ h3{
   background: white;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  padding: 15px;
 }
 
 #heading {
@@ -85,6 +86,7 @@ input:checked+p {
 }
 
 input[type="checkbox"] {
+  cursor: pointer;
   margin: 20px;
 }
 form {
@@ -102,6 +104,7 @@ form {
   font-size: 30px;
   padding-bottom: 2px;
   border-width: 0;
+  cursor: pointer;
 }
 
 input[type="text"] {
@@ -156,11 +159,15 @@ input[type="text"]:focus {
   text-decoration: none;
 }
 
-.del, .up, .down { 
-  display: inline-block; 
+.del,
+.up,
+.down,
+.edit { 
+  display: inline-block;
   float: right; 
+  padding-right: 7px;
+  cursor: pointer;
 }
-
 
 
 /* Pomodoro */
